--- a/myproject/templates/voiceOutput.html
+++ b/myproject/templates/voiceOutput.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% load static %}
+{% load static %}{% csrf_token %}
 
 <html lang="ko">
 
@@ -32,17 +32,18 @@
 
         <!-- 화살표 이미지 추가 -->
         <div class="arrow-image">
-            <img src="{% static 'src/arrow.png' %}" alt="Arrow Image" width="30" height="auto">
+            <img id="translation" src="{% static 'src/arrow.png' %}" alt="Arrow Image" width="30" height="auto">
         </div>
 
 
-        <div class="input_text" id="outputText">
+        <div class="input_text" >
             <p class="input-label">최종 번역 결과:</p>
+            <p id="outputText"></p>
         </div>
 
         <div class="footer">
-            <div class="button-wrapper">
-                <img src="{% static 'src/replay.png' %}" id="replayButton" alt="Repeat" width="30" height="30">
+            <div class="button-wrapper" id="replayButton">
+                <img src="{% static 'src/replay.png' %}" alt="Repeat" width="30" height="30">
                 <span id="replay">다시 입력하기</span>
             </div>
         </div>
@@ -51,6 +52,37 @@
 </body>
 
     <script>
+    /*언어 번역*/
+    document.getElementById('translation').addEventListener('click', function () {
+        console.log("clicked")
+        var org_translationSentences = JSON.parse('{{ translation_sentences|safe }}');
+        var translationSentences = org_translationSentences['data'].replace('<eos>', '').replace(' ','').replace('▁',' ')
+        console.log(translationSentences)
+        fetch('/lang_translation/', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': '{{ csrf_token }}',  // Django CSRF 토큰 추가
+            },
+            body: JSON.stringify({data: translationSentences}),               
+        }) 
+        .then(response => response.json())  
+        .then(data => {
+            // 여기에서 서버에서 받은 JSON 데이터(data)를 활용하여 원하는 동작을 수행
+            console.log(data);
+
+            if(Object.keys(data)[0] == 'transcription') {
+                document.getElementById('outputText').innerText = JSON.stringify(data['transcription'], null, 2);
+            } else {
+                document.getElementById('outputText').innerText = JSON.stringify(data['error'], null, 2);
+            }
+            // console.log()
+            // document.getElementById('inputText').innerText = JSON.stringify(data, null, 2);
+
+        })
+        .catch(error => console.error('Error:', error));
+    });
+
     /* 다시 입력페이지로 */
     document.getElementById('replayButton').addEventListener('click', function () {
         window.location.href = "{% url 'voice_page' %}";  // 'your_view_name'은 대상 뷰의 이름
