--- a/myproject/templates/main.html
+++ b/myproject/templates/main.html
@@ -67,7 +67,7 @@
     window.location.href = "{% url 'voice_page' %}"; // 'your_view_name'은 대상 뷰의 이름
   });
   document.getElementById('text_service').addEventListener('click', function() {
-    window.location.href = "{% url 'hello_world' %}"; // 'your_view_name'은 대상 뷰의 이름
+    // window.location.href = "{% url 'hello_world' %}"; // 'your_view_name'은 대상 뷰의 이름
   });
   //상단 로고 클릭하면 start페이지로
   document.getElementById('logoButton').addEventListener('click', function() {
